# cpp-httplib-with-ifaddrs-fixed-for-android

./: CMakeLists.txt  README.md  httplib.cc
android-ifaddrs/: CMakeLists.txt
include/: httplib.h
